--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,6 @@
     "activityBarBadge.foreground": "#15202b",
     "sash.hoverBorder": "#2cff84",
     "statusBar.background": "#00f867",
-    "statusBar.debuggingBackground": "#f80091",
-    "statusBar.debuggingForeground": "#e7e7e7",
     "statusBar.foreground": "#15202b",
     "statusBarItem.hoverBackground": "#00c552",
     "statusBarItem.remoteBackground": "#00f867",
@@ -18,7 +16,8 @@
     "titleBar.activeBackground": "#00f867",
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#00f86799",
-    "titleBar.inactiveForeground": "#15202b99"
+    "titleBar.inactiveForeground": "#15202b99",
+    "commandCenter.border": "#15202b99"
   },
   "peacock.color": "#00f867"
 }
